manager assign review team feature

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -30,7 +30,7 @@ http://java.sun.com/xml/ns/j2ee/web-app_3_0.xsd
 
 	<servlet-mapping>
 		<servlet-name>HRMgmtSysWeb</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 </web-app>
 
